// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`structure should generate *.js and *.d.ts files when emitTranspiledCode is set to true: structure 1`] = `
"
[type-graphql]
  enhance.js
  enhance.ts
  [enums]
    Color.js
    Color.ts
    NullsOrder.js
    NullsOrder.ts
    PostScalarFieldEnum.js
    PostScalarFieldEnum.ts
    QueryMode.js
    QueryMode.ts
    SortOrder.js
    SortOrder.ts
    TransactionIsolationLevel.js
    TransactionIsolationLevel.ts
    UserScalarFieldEnum.js
    UserScalarFieldEnum.ts
    index.js
    index.ts
  helpers.js
  helpers.ts
  index.js
  index.ts
  [models]
    Post.js
    Post.ts
    User.js
    User.ts
    index.js
    index.ts
  [resolvers]
    [crud]
      [Post]
        AggregatePostResolver.js
        AggregatePostResolver.ts
        CreateManyAndReturnPostResolver.js
        CreateManyAndReturnPostResolver.ts
        CreateManyPostResolver.js
        CreateManyPostResolver.ts
        CreateOnePostResolver.js
        CreateOnePostResolver.ts
        DeleteManyPostResolver.js
        DeleteManyPostResolver.ts
        DeleteOnePostResolver.js
        DeleteOnePostResolver.ts
        FindFirstPostOrThrowResolver.js
        FindFirstPostOrThrowResolver.ts
        FindFirstPostResolver.js
        FindFirstPostResolver.ts
        FindManyPostResolver.js
        FindManyPostResolver.ts
        FindUniquePostOrThrowResolver.js
        FindUniquePostOrThrowResolver.ts
        FindUniquePostResolver.js
        FindUniquePostResolver.ts
        GroupByPostResolver.js
        GroupByPostResolver.ts
        PostCrudResolver.js
        PostCrudResolver.ts
        UpdateManyPostResolver.js
        UpdateManyPostResolver.ts
        UpdateOnePostResolver.js
        UpdateOnePostResolver.ts
        UpsertOnePostResolver.js
        UpsertOnePostResolver.ts
        [args]
          AggregatePostArgs.js
          AggregatePostArgs.ts
          CreateManyAndReturnPostArgs.js
          CreateManyAndReturnPostArgs.ts
          CreateManyPostArgs.js
          CreateManyPostArgs.ts
          CreateOnePostArgs.js
          CreateOnePostArgs.ts
          DeleteManyPostArgs.js
          DeleteManyPostArgs.ts
          DeleteOnePostArgs.js
          DeleteOnePostArgs.ts
          FindFirstPostArgs.js
          FindFirstPostArgs.ts
          FindFirstPostOrThrowArgs.js
          FindFirstPostOrThrowArgs.ts
          FindManyPostArgs.js
          FindManyPostArgs.ts
          FindUniquePostArgs.js
          FindUniquePostArgs.ts
          FindUniquePostOrThrowArgs.js
          FindUniquePostOrThrowArgs.ts
          GroupByPostArgs.js
          GroupByPostArgs.ts
          UpdateManyPostArgs.js
          UpdateManyPostArgs.ts
          UpdateOnePostArgs.js
          UpdateOnePostArgs.ts
          UpsertOnePostArgs.js
          UpsertOnePostArgs.ts
          index.js
          index.ts
      [User]
        AggregateUserResolver.js
        AggregateUserResolver.ts
        CreateManyAndReturnUserResolver.js
        CreateManyAndReturnUserResolver.ts
        CreateManyUserResolver.js
        CreateManyUserResolver.ts
        CreateOneUserResolver.js
        CreateOneUserResolver.ts
        DeleteManyUserResolver.js
        DeleteManyUserResolver.ts
        DeleteOneUserResolver.js
        DeleteOneUserResolver.ts
        FindFirstUserOrThrowResolver.js
        FindFirstUserOrThrowResolver.ts
        FindFirstUserResolver.js
        FindFirstUserResolver.ts
        FindManyUserResolver.js
        FindManyUserResolver.ts
        FindUniqueUserOrThrowResolver.js
        FindUniqueUserOrThrowResolver.ts
        FindUniqueUserResolver.js
        FindUniqueUserResolver.ts
        GroupByUserResolver.js
        GroupByUserResolver.ts
        UpdateManyUserResolver.js
        UpdateManyUserResolver.ts
        UpdateOneUserResolver.js
        UpdateOneUserResolver.ts
        UpsertOneUserResolver.js
        UpsertOneUserResolver.ts
        UserCrudResolver.js
        UserCrudResolver.ts
        [args]
          AggregateUserArgs.js
          AggregateUserArgs.ts
          CreateManyAndReturnUserArgs.js
          CreateManyAndReturnUserArgs.ts
          CreateManyUserArgs.js
          CreateManyUserArgs.ts
          CreateOneUserArgs.js
          CreateOneUserArgs.ts
          DeleteManyUserArgs.js
          DeleteManyUserArgs.ts
          DeleteOneUserArgs.js
          DeleteOneUserArgs.ts
          FindFirstUserArgs.js
          FindFirstUserArgs.ts
          FindFirstUserOrThrowArgs.js
          FindFirstUserOrThrowArgs.ts
          FindManyUserArgs.js
          FindManyUserArgs.ts
          FindUniqueUserArgs.js
          FindUniqueUserArgs.ts
          FindUniqueUserOrThrowArgs.js
          FindUniqueUserOrThrowArgs.ts
          GroupByUserArgs.js
          GroupByUserArgs.ts
          UpdateManyUserArgs.js
          UpdateManyUserArgs.ts
          UpdateOneUserArgs.js
          UpdateOneUserArgs.ts
          UpsertOneUserArgs.js
          UpsertOneUserArgs.ts
          index.js
          index.ts
      args.index.js
      args.index.ts
      index.js
      index.ts
      resolvers-actions.index.js
      resolvers-actions.index.ts
      resolvers-crud.index.js
      resolvers-crud.index.ts
    [inputs]
      EnumColorFieldUpdateOperationsInput.js
      EnumColorFieldUpdateOperationsInput.ts
      EnumColorFilter.js
      EnumColorFilter.ts
      EnumColorWithAggregatesFilter.js
      EnumColorWithAggregatesFilter.ts
      IntFieldUpdateOperationsInput.js
      IntFieldUpdateOperationsInput.ts
      IntFilter.js
      IntFilter.ts
      IntWithAggregatesFilter.js
      IntWithAggregatesFilter.ts
      NestedEnumColorFilter.js
      NestedEnumColorFilter.ts
      NestedEnumColorWithAggregatesFilter.js
      NestedEnumColorWithAggregatesFilter.ts
      NestedFloatFilter.js
      NestedFloatFilter.ts
      NestedIntFilter.js
      NestedIntFilter.ts
      NestedIntNullableFilter.js
      NestedIntNullableFilter.ts
      NestedIntWithAggregatesFilter.js
      NestedIntWithAggregatesFilter.ts
      NestedStringFilter.js
      NestedStringFilter.ts
      NestedStringNullableFilter.js
      NestedStringNullableFilter.ts
      NestedStringNullableWithAggregatesFilter.js
      NestedStringNullableWithAggregatesFilter.ts
      NestedStringWithAggregatesFilter.js
      NestedStringWithAggregatesFilter.ts
      NullableStringFieldUpdateOperationsInput.js
      NullableStringFieldUpdateOperationsInput.ts
      PostAvgOrderByAggregateInput.js
      PostAvgOrderByAggregateInput.ts
      PostCountOrderByAggregateInput.js
      PostCountOrderByAggregateInput.ts
      PostCreateInput.js
      PostCreateInput.ts
      PostCreateManyAuthorInput.js
      PostCreateManyAuthorInput.ts
      PostCreateManyAuthorInputEnvelope.js
      PostCreateManyAuthorInputEnvelope.ts
      PostCreateManyInput.js
      PostCreateManyInput.ts
      PostCreateNestedManyWithoutAuthorInput.js
      PostCreateNestedManyWithoutAuthorInput.ts
      PostCreateOrConnectWithoutAuthorInput.js
      PostCreateOrConnectWithoutAuthorInput.ts
      PostCreateWithoutAuthorInput.js
      PostCreateWithoutAuthorInput.ts
      PostListRelationFilter.js
      PostListRelationFilter.ts
      PostMaxOrderByAggregateInput.js
      PostMaxOrderByAggregateInput.ts
      PostMinOrderByAggregateInput.js
      PostMinOrderByAggregateInput.ts
      PostOrderByRelationAggregateInput.js
      PostOrderByRelationAggregateInput.ts
      PostOrderByWithAggregationInput.js
      PostOrderByWithAggregationInput.ts
      PostOrderByWithRelationInput.js
      PostOrderByWithRelationInput.ts
      PostScalarWhereInput.js
      PostScalarWhereInput.ts
      PostScalarWhereWithAggregatesInput.js
      PostScalarWhereWithAggregatesInput.ts
      PostSumOrderByAggregateInput.js
      PostSumOrderByAggregateInput.ts
      PostUpdateInput.js
      PostUpdateInput.ts
      PostUpdateManyMutationInput.js
      PostUpdateManyMutationInput.ts
      PostUpdateManyWithWhereWithoutAuthorInput.js
      PostUpdateManyWithWhereWithoutAuthorInput.ts
      PostUpdateManyWithoutAuthorNestedInput.js
      PostUpdateManyWithoutAuthorNestedInput.ts
      PostUpdateWithWhereUniqueWithoutAuthorInput.js
      PostUpdateWithWhereUniqueWithoutAuthorInput.ts
      PostUpdateWithoutAuthorInput.js
      PostUpdateWithoutAuthorInput.ts
      PostUpsertWithWhereUniqueWithoutAuthorInput.js
      PostUpsertWithWhereUniqueWithoutAuthorInput.ts
      PostWhereInput.js
      PostWhereInput.ts
      PostWhereUniqueInput.js
      PostWhereUniqueInput.ts
      SortOrderInput.js
      SortOrderInput.ts
      StringFieldUpdateOperationsInput.js
      StringFieldUpdateOperationsInput.ts
      StringFilter.js
      StringFilter.ts
      StringNullableFilter.js
      StringNullableFilter.ts
      StringNullableWithAggregatesFilter.js
      StringNullableWithAggregatesFilter.ts
      StringWithAggregatesFilter.js
      StringWithAggregatesFilter.ts
      UserAvgOrderByAggregateInput.js
      UserAvgOrderByAggregateInput.ts
      UserCountOrderByAggregateInput.js
      UserCountOrderByAggregateInput.ts
      UserCreateInput.js
      UserCreateInput.ts
      UserCreateManyInput.js
      UserCreateManyInput.ts
      UserCreateNestedOneWithoutPostsInput.js
      UserCreateNestedOneWithoutPostsInput.ts
      UserCreateOrConnectWithoutPostsInput.js
      UserCreateOrConnectWithoutPostsInput.ts
      UserCreateWithoutPostsInput.js
      UserCreateWithoutPostsInput.ts
      UserMaxOrderByAggregateInput.js
      UserMaxOrderByAggregateInput.ts
      UserMinOrderByAggregateInput.js
      UserMinOrderByAggregateInput.ts
      UserOrderByWithAggregationInput.js
      UserOrderByWithAggregationInput.ts
      UserOrderByWithRelationInput.js
      UserOrderByWithRelationInput.ts
      UserScalarRelationFilter.js
      UserScalarRelationFilter.ts
      UserScalarWhereWithAggregatesInput.js
      UserScalarWhereWithAggregatesInput.ts
      UserSumOrderByAggregateInput.js
      UserSumOrderByAggregateInput.ts
      UserUpdateInput.js
      UserUpdateInput.ts
      UserUpdateManyMutationInput.js
      UserUpdateManyMutationInput.ts
      UserUpdateOneRequiredWithoutPostsNestedInput.js
      UserUpdateOneRequiredWithoutPostsNestedInput.ts
      UserUpdateToOneWithWhereWithoutPostsInput.js
      UserUpdateToOneWithWhereWithoutPostsInput.ts
      UserUpdateWithoutPostsInput.js
      UserUpdateWithoutPostsInput.ts
      UserUpsertWithoutPostsInput.js
      UserUpsertWithoutPostsInput.ts
      UserWhereInput.js
      UserWhereInput.ts
      UserWhereUniqueInput.js
      UserWhereUniqueInput.ts
      index.js
      index.ts
    [outputs]
      AffectedRowsOutput.js
      AffectedRowsOutput.ts
      AggregatePost.js
      AggregatePost.ts
      AggregateUser.js
      AggregateUser.ts
      CreateManyAndReturnPost.js
      CreateManyAndReturnPost.ts
      CreateManyAndReturnUser.js
      CreateManyAndReturnUser.ts
      PostAvgAggregate.js
      PostAvgAggregate.ts
      PostCountAggregate.js
      PostCountAggregate.ts
      PostGroupBy.js
      PostGroupBy.ts
      PostMaxAggregate.js
      PostMaxAggregate.ts
      PostMinAggregate.js
      PostMinAggregate.ts
      PostSumAggregate.js
      PostSumAggregate.ts
      UpdateManyPostAndReturnOutputType.js
      UpdateManyPostAndReturnOutputType.ts
      UpdateManyUserAndReturnOutputType.js
      UpdateManyUserAndReturnOutputType.ts
      UserAvgAggregate.js
      UserAvgAggregate.ts
      UserCount.js
      UserCount.ts
      UserCountAggregate.js
      UserCountAggregate.ts
      UserGroupBy.js
      UserGroupBy.ts
      UserMaxAggregate.js
      UserMaxAggregate.ts
      UserMinAggregate.js
      UserMinAggregate.ts
      UserSumAggregate.js
      UserSumAggregate.ts
      [args]
        UserCountPostsArgs.js
        UserCountPostsArgs.ts
        index.js
        index.ts
      index.js
      index.ts
    [relations]
      [Post]
        PostRelationsResolver.js
        PostRelationsResolver.ts
      [User]
        UserRelationsResolver.js
        UserRelationsResolver.ts
        [args]
          UserPostsArgs.js
          UserPostsArgs.ts
          index.js
          index.ts
      args.index.js
      args.index.ts
      index.js
      index.ts
      resolvers.index.js
      resolvers.index.ts
  scalars.js
  scalars.ts
"
`;

exports[`structure should generate proper folders and file names when model is renamed: structure 1`] = `
"
[type-graphql]
  enhance.ts
  [enums]
    Color.ts
    NullsOrder.ts
    QueryMode.ts
    RenamedPostScalarFieldEnum.ts
    RenamedUserScalarFieldEnum.ts
    SortOrder.ts
    TransactionIsolationLevel.ts
    index.ts
  helpers.ts
  index.ts
  [models]
    RenamedPost.ts
    RenamedUser.ts
    index.ts
  [resolvers]
    [crud]
      [RenamedPost]
        AggregateRenamedPostResolver.ts
        CreateManyAndReturnRenamedPostResolver.ts
        CreateManyRenamedPostResolver.ts
        CreateOneRenamedPostResolver.ts
        DeleteManyRenamedPostResolver.ts
        DeleteOneRenamedPostResolver.ts
        FindFirstRenamedPostOrThrowResolver.ts
        FindFirstRenamedPostResolver.ts
        FindManyRenamedPostResolver.ts
        FindUniqueRenamedPostOrThrowResolver.ts
        FindUniqueRenamedPostResolver.ts
        GroupByRenamedPostResolver.ts
        RenamedPostCrudResolver.ts
        UpdateManyRenamedPostResolver.ts
        UpdateOneRenamedPostResolver.ts
        UpsertOneRenamedPostResolver.ts
        [args]
          AggregateRenamedPostArgs.ts
          CreateManyAndReturnRenamedPostArgs.ts
          CreateManyRenamedPostArgs.ts
          CreateOneRenamedPostArgs.ts
          DeleteManyRenamedPostArgs.ts
          DeleteOneRenamedPostArgs.ts
          FindFirstRenamedPostArgs.ts
          FindFirstRenamedPostOrThrowArgs.ts
          FindManyRenamedPostArgs.ts
          FindUniqueRenamedPostArgs.ts
          FindUniqueRenamedPostOrThrowArgs.ts
          GroupByRenamedPostArgs.ts
          UpdateManyRenamedPostArgs.ts
          UpdateOneRenamedPostArgs.ts
          UpsertOneRenamedPostArgs.ts
          index.ts
      [RenamedUser]
        AggregateRenamedUserResolver.ts
        CreateManyAndReturnRenamedUserResolver.ts
        CreateManyRenamedUserResolver.ts
        CreateOneRenamedUserResolver.ts
        DeleteManyRenamedUserResolver.ts
        DeleteOneRenamedUserResolver.ts
        FindFirstRenamedUserOrThrowResolver.ts
        FindFirstRenamedUserResolver.ts
        FindManyRenamedUserResolver.ts
        FindUniqueRenamedUserOrThrowResolver.ts
        FindUniqueRenamedUserResolver.ts
        GroupByRenamedUserResolver.ts
        RenamedUserCrudResolver.ts
        UpdateManyRenamedUserResolver.ts
        UpdateOneRenamedUserResolver.ts
        UpsertOneRenamedUserResolver.ts
        [args]
          AggregateRenamedUserArgs.ts
          CreateManyAndReturnRenamedUserArgs.ts
          CreateManyRenamedUserArgs.ts
          CreateOneRenamedUserArgs.ts
          DeleteManyRenamedUserArgs.ts
          DeleteOneRenamedUserArgs.ts
          FindFirstRenamedUserArgs.ts
          FindFirstRenamedUserOrThrowArgs.ts
          FindManyRenamedUserArgs.ts
          FindUniqueRenamedUserArgs.ts
          FindUniqueRenamedUserOrThrowArgs.ts
          GroupByRenamedUserArgs.ts
          UpdateManyRenamedUserArgs.ts
          UpdateOneRenamedUserArgs.ts
          UpsertOneRenamedUserArgs.ts
          index.ts
      args.index.ts
      index.ts
      resolvers-actions.index.ts
      resolvers-crud.index.ts
    [inputs]
      EnumColorFieldUpdateOperationsInput.ts
      EnumColorFilter.ts
      EnumColorWithAggregatesFilter.ts
      IntFieldUpdateOperationsInput.ts
      IntFilter.ts
      IntWithAggregatesFilter.ts
      NestedEnumColorFilter.ts
      NestedEnumColorWithAggregatesFilter.ts
      NestedFloatFilter.ts
      NestedIntFilter.ts
      NestedIntNullableFilter.ts
      NestedIntWithAggregatesFilter.ts
      NestedStringFilter.ts
      NestedStringNullableFilter.ts
      NestedStringNullableWithAggregatesFilter.ts
      NestedStringWithAggregatesFilter.ts
      NullableStringFieldUpdateOperationsInput.ts
      RenamedPostAvgOrderByAggregateInput.ts
      RenamedPostCountOrderByAggregateInput.ts
      RenamedPostCreateInput.ts
      RenamedPostCreateManyAuthorInput.ts
      RenamedPostCreateManyAuthorInputEnvelope.ts
      RenamedPostCreateManyInput.ts
      RenamedPostCreateNestedManyWithoutAuthorInput.ts
      RenamedPostCreateOrConnectWithoutAuthorInput.ts
      RenamedPostCreateWithoutAuthorInput.ts
      RenamedPostListRelationFilter.ts
      RenamedPostMaxOrderByAggregateInput.ts
      RenamedPostMinOrderByAggregateInput.ts
      RenamedPostOrderByRelationAggregateInput.ts
      RenamedPostOrderByWithAggregationInput.ts
      RenamedPostOrderByWithRelationInput.ts
      RenamedPostScalarWhereInput.ts
      RenamedPostScalarWhereWithAggregatesInput.ts
      RenamedPostSumOrderByAggregateInput.ts
      RenamedPostUpdateInput.ts
      RenamedPostUpdateManyMutationInput.ts
      RenamedPostUpdateManyWithWhereWithoutAuthorInput.ts
      RenamedPostUpdateManyWithoutAuthorNestedInput.ts
      RenamedPostUpdateWithWhereUniqueWithoutAuthorInput.ts
      RenamedPostUpdateWithoutAuthorInput.ts
      RenamedPostUpsertWithWhereUniqueWithoutAuthorInput.ts
      RenamedPostWhereInput.ts
      RenamedPostWhereUniqueInput.ts
      RenamedUserAvgOrderByAggregateInput.ts
      RenamedUserCountOrderByAggregateInput.ts
      RenamedUserCreateInput.ts
      RenamedUserCreateManyInput.ts
      RenamedUserCreateNestedOneWithoutPostsInput.ts
      RenamedUserCreateOrConnectWithoutPostsInput.ts
      RenamedUserCreateWithoutPostsInput.ts
      RenamedUserMaxOrderByAggregateInput.ts
      RenamedUserMinOrderByAggregateInput.ts
      RenamedUserOrderByWithAggregationInput.ts
      RenamedUserOrderByWithRelationInput.ts
      RenamedUserScalarRelationFilter.ts
      RenamedUserScalarWhereWithAggregatesInput.ts
      RenamedUserSumOrderByAggregateInput.ts
      RenamedUserUpdateInput.ts
      RenamedUserUpdateManyMutationInput.ts
      RenamedUserUpdateOneRequiredWithoutPostsNestedInput.ts
      RenamedUserUpdateToOneWithWhereWithoutPostsInput.ts
      RenamedUserUpdateWithoutPostsInput.ts
      RenamedUserUpsertWithoutPostsInput.ts
      RenamedUserWhereInput.ts
      RenamedUserWhereUniqueInput.ts
      SortOrderInput.ts
      StringFieldUpdateOperationsInput.ts
      StringFilter.ts
      StringNullableFilter.ts
      StringNullableWithAggregatesFilter.ts
      StringWithAggregatesFilter.ts
      index.ts
    [outputs]
      AffectedRowsOutput.ts
      AggregateRenamedPost.ts
      AggregateRenamedUser.ts
      CreateManyAndReturnRenamedPost.ts
      CreateManyAndReturnRenamedUser.ts
      RenamedPostAvgAggregate.ts
      RenamedPostCountAggregate.ts
      RenamedPostGroupBy.ts
      RenamedPostMaxAggregate.ts
      RenamedPostMinAggregate.ts
      RenamedPostSumAggregate.ts
      RenamedUserAvgAggregate.ts
      RenamedUserCount.ts
      RenamedUserCountAggregate.ts
      RenamedUserGroupBy.ts
      RenamedUserMaxAggregate.ts
      RenamedUserMinAggregate.ts
      RenamedUserSumAggregate.ts
      UpdateManyPostAndReturnOutputType.ts
      UpdateManyUserAndReturnOutputType.ts
      [args]
        RenamedUserCountPostsArgs.ts
        index.ts
      index.ts
    [relations]
      [RenamedPost]
        RenamedPostRelationsResolver.ts
      [RenamedUser]
        RenamedUserRelationsResolver.ts
        [args]
          RenamedUserPostsArgs.ts
          index.ts
      args.index.ts
      index.ts
      resolvers.index.ts
  scalars.ts
"
`;

exports[`structure should generate proper folders structure and file names for complex datamodel: structure 1`] = `
"
[type-graphql]
  enhance.ts
  [enums]
    Color.ts
    NullsOrder.ts
    PostScalarFieldEnum.ts
    QueryMode.ts
    SortOrder.ts
    TransactionIsolationLevel.ts
    UserScalarFieldEnum.ts
    index.ts
  helpers.ts
  index.ts
  [models]
    Post.ts
    User.ts
    index.ts
  [resolvers]
    [crud]
      [Post]
        AggregatePostResolver.ts
        CreateManyAndReturnPostResolver.ts
        CreateManyPostResolver.ts
        CreateOnePostResolver.ts
        DeleteManyPostResolver.ts
        DeleteOnePostResolver.ts
        FindFirstPostOrThrowResolver.ts
        FindFirstPostResolver.ts
        FindManyPostResolver.ts
        FindUniquePostOrThrowResolver.ts
        FindUniquePostResolver.ts
        GroupByPostResolver.ts
        PostCrudResolver.ts
        UpdateManyPostResolver.ts
        UpdateOnePostResolver.ts
        UpsertOnePostResolver.ts
        [args]
          AggregatePostArgs.ts
          CreateManyAndReturnPostArgs.ts
          CreateManyPostArgs.ts
          CreateOnePostArgs.ts
          DeleteManyPostArgs.ts
          DeleteOnePostArgs.ts
          FindFirstPostArgs.ts
          FindFirstPostOrThrowArgs.ts
          FindManyPostArgs.ts
          FindUniquePostArgs.ts
          FindUniquePostOrThrowArgs.ts
          GroupByPostArgs.ts
          UpdateManyPostArgs.ts
          UpdateOnePostArgs.ts
          UpsertOnePostArgs.ts
          index.ts
      [User]
        AggregateUserResolver.ts
        CreateManyAndReturnUserResolver.ts
        CreateManyUserResolver.ts
        CreateOneUserResolver.ts
        DeleteManyUserResolver.ts
        DeleteOneUserResolver.ts
        FindFirstUserOrThrowResolver.ts
        FindFirstUserResolver.ts
        FindManyUserResolver.ts
        FindUniqueUserOrThrowResolver.ts
        FindUniqueUserResolver.ts
        GroupByUserResolver.ts
        UpdateManyUserResolver.ts
        UpdateOneUserResolver.ts
        UpsertOneUserResolver.ts
        UserCrudResolver.ts
        [args]
          AggregateUserArgs.ts
          CreateManyAndReturnUserArgs.ts
          CreateManyUserArgs.ts
          CreateOneUserArgs.ts
          DeleteManyUserArgs.ts
          DeleteOneUserArgs.ts
          FindFirstUserArgs.ts
          FindFirstUserOrThrowArgs.ts
          FindManyUserArgs.ts
          FindUniqueUserArgs.ts
          FindUniqueUserOrThrowArgs.ts
          GroupByUserArgs.ts
          UpdateManyUserArgs.ts
          UpdateOneUserArgs.ts
          UpsertOneUserArgs.ts
          index.ts
      args.index.ts
      index.ts
      resolvers-actions.index.ts
      resolvers-crud.index.ts
    [inputs]
      EnumColorFieldUpdateOperationsInput.ts
      EnumColorFilter.ts
      EnumColorWithAggregatesFilter.ts
      IntFieldUpdateOperationsInput.ts
      IntFilter.ts
      IntWithAggregatesFilter.ts
      NestedEnumColorFilter.ts
      NestedEnumColorWithAggregatesFilter.ts
      NestedFloatFilter.ts
      NestedIntFilter.ts
      NestedIntNullableFilter.ts
      NestedIntWithAggregatesFilter.ts
      NestedStringFilter.ts
      NestedStringNullableFilter.ts
      NestedStringNullableWithAggregatesFilter.ts
      NestedStringWithAggregatesFilter.ts
      NullableStringFieldUpdateOperationsInput.ts
      PostAvgOrderByAggregateInput.ts
      PostCountOrderByAggregateInput.ts
      PostCreateInput.ts
      PostCreateManyAuthorInput.ts
      PostCreateManyAuthorInputEnvelope.ts
      PostCreateManyInput.ts
      PostCreateNestedManyWithoutAuthorInput.ts
      PostCreateOrConnectWithoutAuthorInput.ts
      PostCreateWithoutAuthorInput.ts
      PostListRelationFilter.ts
      PostMaxOrderByAggregateInput.ts
      PostMinOrderByAggregateInput.ts
      PostOrderByRelationAggregateInput.ts
      PostOrderByWithAggregationInput.ts
      PostOrderByWithRelationInput.ts
      PostScalarWhereInput.ts
      PostScalarWhereWithAggregatesInput.ts
      PostSumOrderByAggregateInput.ts
      PostUpdateInput.ts
      PostUpdateManyMutationInput.ts
      PostUpdateManyWithWhereWithoutAuthorInput.ts
      PostUpdateManyWithoutAuthorNestedInput.ts
      PostUpdateWithWhereUniqueWithoutAuthorInput.ts
      PostUpdateWithoutAuthorInput.ts
      PostUpsertWithWhereUniqueWithoutAuthorInput.ts
      PostWhereInput.ts
      PostWhereUniqueInput.ts
      SortOrderInput.ts
      StringFieldUpdateOperationsInput.ts
      StringFilter.ts
      StringNullableFilter.ts
      StringNullableWithAggregatesFilter.ts
      StringWithAggregatesFilter.ts
      UserAvgOrderByAggregateInput.ts
      UserCountOrderByAggregateInput.ts
      UserCreateInput.ts
      UserCreateManyInput.ts
      UserCreateNestedOneWithoutPostsInput.ts
      UserCreateOrConnectWithoutPostsInput.ts
      UserCreateWithoutPostsInput.ts
      UserMaxOrderByAggregateInput.ts
      UserMinOrderByAggregateInput.ts
      UserOrderByWithAggregationInput.ts
      UserOrderByWithRelationInput.ts
      UserScalarRelationFilter.ts
      UserScalarWhereWithAggregatesInput.ts
      UserSumOrderByAggregateInput.ts
      UserUpdateInput.ts
      UserUpdateManyMutationInput.ts
      UserUpdateOneRequiredWithoutPostsNestedInput.ts
      UserUpdateToOneWithWhereWithoutPostsInput.ts
      UserUpdateWithoutPostsInput.ts
      UserUpsertWithoutPostsInput.ts
      UserWhereInput.ts
      UserWhereUniqueInput.ts
      index.ts
    [outputs]
      AffectedRowsOutput.ts
      AggregatePost.ts
      AggregateUser.ts
      CreateManyAndReturnPost.ts
      CreateManyAndReturnUser.ts
      PostAvgAggregate.ts
      PostCountAggregate.ts
      PostGroupBy.ts
      PostMaxAggregate.ts
      PostMinAggregate.ts
      PostSumAggregate.ts
      UpdateManyPostAndReturnOutputType.ts
      UpdateManyUserAndReturnOutputType.ts
      UserAvgAggregate.ts
      UserCount.ts
      UserCountAggregate.ts
      UserGroupBy.ts
      UserMaxAggregate.ts
      UserMinAggregate.ts
      UserSumAggregate.ts
      [args]
        UserCountPostsArgs.ts
        index.ts
      index.ts
    [relations]
      [Post]
        PostRelationsResolver.ts
      [User]
        UserRelationsResolver.ts
        [args]
          UserPostsArgs.ts
          index.ts
      args.index.ts
      index.ts
      resolvers.index.ts
  scalars.ts
"
`;
